File scanner finds CREATE line

--- a/md_dbdocs.app/config.json
+++ b/md_dbdocs.app/config.json
@@ -1,9 +1,9 @@
 {
-  "server": "ZLUKEPF0XLD7U\\DEVSERVER",
+  "server": "HOME-WORKHORSE\\DEVSERVER",
   "dataBase": "PDM",
-  "useWindowsAuth": true,
-  "sqlUserName": null,
-  "sqlPassword": null,
+  "useWindowsAuth": false,
+  "sqlUserName": "MatC",
+  "sqlPassword": "Wel@1145",
   "markdownIncludeConfigFilePath": "C:\\_MyProjects\\SAPLens\\Database\\SAPLens.SQLServer\\_Info\\Docs\\include_config.json",
-  "sqlProjectRootPath": "C:\\_MyProjects\\SAPLens\\Database\\Test\\test2"
+  "sqlProjectRootPath": "C:\\_MyProjects\\SAPLens\\Database\\SAPLens.SQLServer"
 }
