--- a/md_dbdocs.app/config.json
+++ b/md_dbdocs.app/config.json
@@ -1,8 +1,8 @@
 {
-  "server": "VTISCLESQL003\\INSTANCE01",
+  "server": "HOME-WORKHORSE\\DEVSERVER",
   "dataBase": "PDM",
   "useWindowsAuth": false,
-  "sqlUserName": "ChrupczM",
+  "sqlUserName": "MatC",
   "sqlPassword": "Wel@1145",
   "markdownIncludeConfigFilePath": "C:\\_MyProjects\\SAPLens\\Database\\SAPLens.SQLServer\\_Info\\Docs\\include_config.json",
   "sqlProjectRootPath": "C:\\_MyProjects\\SAPLens\\Database\\SAPLens.SQLServer"
