added procedures query

--- a/md_dbdocs.app/md_dbdocs.app.csproj
+++ b/md_dbdocs.app/md_dbdocs.app.csproj
@@ -75,11 +75,14 @@
     <Compile Include="Helpers\JsonSerializer.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="Helpers\ServerObjectsHelper.cs" />
+    <Compile Include="Helpers\SqlObjectTypeTranslator.cs" />
     <Compile Include="Helpers\YamlSerializer.cs" />
     <Compile Include="Models\ConfigValidationModel.cs" />
+    <Compile Include="Models\ServerObjectChildParameterModel.cs" />
     <Compile Include="Models\ServerObjectParentModel.cs" />
     <Compile Include="Models\ProjectObjectModel.cs" />
-    <Compile Include="Models\ServerObjectChildModel.cs" />
+    <Compile Include="Models\ServerObjectChildColumnModel.cs" />
+    <Compile Include="Models\SolutionObjectModel.cs" />
     <Compile Include="Models\YamlModel\AuthorModel.cs" />
     <Compile Include="Models\YamlModel\DatesInfoModel.cs" />
     <Compile Include="Models\YamlModel\HeaderCommentModel.cs" />
@@ -163,6 +166,7 @@
     <Content Include="SQL\GetColumnsInfo.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="SQL\GetParametersInfo.sql" />
     <Content Include="SQL\GetParentObjects.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
