--- a/md_dbdocs.app/packages.config
+++ b/md_dbdocs.app/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="2.0.90" targetFramework="net48" />
+  <package id="MathConverter" version="1.2.1.6" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="YamlDotNet" version="11.2.0" targetFramework="net48" />
