Added sql scripts for documentation

--- a/md_dbdocs.app/md_dbdocs.app.csproj
+++ b/md_dbdocs.app/md_dbdocs.app.csproj
@@ -212,12 +212,15 @@
     <Content Include="SQL\GetColumnsInfo.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="SQL\GetDependants.sql" />
     <Content Include="SQL\GetParametersInfo.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="SQL\GetParentObjects.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="SQL\GetTableRelations.sql" />
+    <Content Include="SQL\GetUniqueKeys.sql" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
